//
// Copyright Inrupt Inc.
//
// Permission is hereby granted, free of charge, to any person obtaining a copy
// of this software and associated documentation files (the "Software"), to deal in
// the Software without restriction, including without limitation the rights to use,
// copy, modify, merge, publish, distribute, sublicense, and/or sell copies of the
// Software, and to permit persons to whom the Software is furnished to do so,
// subject to the following conditions:
//
// The above copyright notice and this permission notice shall be included in
// all copies or substantial portions of the Software.
//
// THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED,
// INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A
// PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT
// HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION
// OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE
// SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
//

import { render } from "@testing-library/react";
import DatePicker from "./DatePicker";

jest.useFakeTimers();

describe("DatePicker", () => {
  beforeAll(() => {
    jest.setSystemTime(new Date(2023, 3, 1));
  });

  it("renders a date picker with default duration", () => {
    const { asFragment } = render(
      <DatePicker
        expirationDate={{ type: "Duration", value: "3 Months" }}
        // eslint-disable-next-line @typescript-eslint/no-empty-function
        setExpirationDate={() => {}}
      />
    );
    expect(asFragment()).toMatchSnapshot();
  });

  it("renders a date picker with expiration date if available", () => {
    const { asFragment } = render(
      <DatePicker
        expirationDate={{
          type: "Date",
          value: new Date("2099-05-26T16:40:03.009Z"),
        }}
        // eslint-disable-next-line @typescript-eslint/no-empty-function
        setExpirationDate={() => {}}
      />
    );
    expect(asFragment()).toMatchSnapshot();
  });
});
